<resources>
    <string name="app_name">DayriCam</string>
    <string name="user">username</string>
    <string name="Alumno">Alumno</string>
    <string name="Maestro">Maestro</string>
    <string name="Modificar">Modificar</string>
    <string name="newpass">nueva contraseña</string>


    <string name="item1">boton1</string>
    <string name="item2">boton2</string>
    <string name="item3">boton3</string>

    <string name="password">contraseña</string>
    <string name="title_activity_alumnos">Alumnos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maestros">Maestros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>